# ProjectGekko

./: .gitignore  .ruff.toml  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.github/: dependabot.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v2.0-MILESTONE-AUDIT.md
.planning/debug/: alembic-fk-batch-migration.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/phases/01-foundation-vertical-slice-alpaca-paper-slack-hitl/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-03-PLAN.md  (+19 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: sdk-shape.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_orderguard.py  0003_event_types_phase2.py  0004_p3_hitl_ux.py  0005_p4_cost_ceiling.py  0006_p4_cost_ceiling_repair.py  0007_p5_trust_ladder.py
src/gekko/: __main__.py  cli.py  config.py  logging_config.py
tests/: conftest.py
tests/integration/: test_agent_runtime.py  test_alembic_fk_seeded_upgrade.py  test_alpaca_live_credentials.py  test_alpaca_paper_round_trip.py  test_cost_ceiling_dedup.py  test_dashboard_approve_flow.py  test_dashboard_edit_size_happy.py  test_dashboard_hitl_actions.py  test_dashboard_kill.py  test_dashboard_strategy_edit.py  test_dedup_race.py  test_first_live_gate.py  test_kill_persistence.py  test_kill_switch.py  test_orderguard_cap_rejection.py  test_orderguard_chain_paper.py  test_p3_walking_skeleton.py  test_promote_paper_to_live.py  test_promote_paper_to_live_end_to_end.py  test_scheduler_persistence.py  test_scheduler_quiet_hours.py  test_slack_approval_to_executor.py  test_sqlcipher_passphrase.py  test_sweep_persistence.py  test_trigger_run_end_to_end.py
tests/unit/: test_alembic_0002.py  test_alpaca_constructor_guard.py  test_alpaca_fill_stream.py  test_alpaca_live_construction_locked.py  test_alpaca_place_order.py  test_alpaca_retry.py  test_anomaly.py  test_approval_proposals.py  test_audit_canonical.py  test_audit_chain.py  test_audit_verify.py  test_auto_execute.py  test_brokerage_abc.py  test_budget_tracker.py  test_capital_ceiling.py  test_chat_update_expired.py  test_cli.py  test_cli_strategy_chat.py  test_client_order_id.py  test_config.py  test_cost_ceiling.py  test_cost_ledger.py  test_daily_pnl_aggregation.py  test_daily_pnl_audit_honesty.py  test_daily_pnl_respects_quiet.py  test_dashboard_approvals.py  test_dashboard_auth_safety_routes.py  test_dashboard_edit_size.py  test_dashboard_login.py  test_dashboard_middleware_order.py  test_dashboard_templates_sri.py  test_db_engine.py  test_db_models.py  test_db_sync_engine_no_passphrase_in_repr.py  test_decision_prompt_isolation.py  test_decision_tool_target_notional.py  test_dm_bypass_categories.py  test_dm_routine_suppressed.py  test_edit_size_caps.py  test_edit_size_not_direct_broker.py  (+61 more)
(+220 files in other folders)
