[project]
name = "gekko"
version = "0.1.0"
description = "Autonomous Claude-powered stock trading agent — Phase 1 walking skeleton (Alpaca paper + Slack HITL)."
requires-python = ">=3.12,<3.13"
readme = "README.md"
authors = [
    { name = "Chris Platika" },
]
license = { text = "Proprietary" }

# Locked dependency pins per RESEARCH.md §"Project scaffolding" + Standard Stack.
# All 15 third-party packages cleared by the Task 1 PyPI legitimacy audit checkpoint
# (sqlcipher3-wheels retained per RESEARCH decision — Windows wheels priority).
dependencies = [
    "claude-agent-sdk>=0.2.93,<0.3",
    "alpaca-py>=0.42,<0.50",
    "slack-bolt>=1.18,<2",
    # slack-bolt's AsyncApp imports aiohttp at module-level even when only
    # the FastAPI adapter is used; pin it explicitly so slack.app imports
    # cleanly (Plan 01-09 mounts the route).
    "aiohttp>=3.9",
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "sqlalchemy>=2.0,<3",
    "alembic",
    "sqlcipher3-wheels>=0.5.7",
    "apscheduler>=3.10,<4",
    "pydantic>=2.7,<3",
    "structlog>=24.5",
    "httpx>=0.27",
    "pandas_market_calendars>=4.4",
    "finnhub-python",
    "yahooquery",
    "python-dateutil",
    "tzdata",
    "typer>=0.12",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "pytest-mock",
    "respx",
    "freezegun",
    "pytest-alembic",
    "mypy",
    "ruff",
    "pre-commit",
]

[project.scripts]
# Per RESEARCH §Open Question 6 — this is what makes `gekko --help` work end-to-end.
gekko = "gekko.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gekko"]

# ---------------------------------------------------------------------------
# Pytest — per VALIDATION.md §Wave 0 Requirements
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: hits external services unless cassettes are used",
]
addopts = "-q --no-header -x"

# ---------------------------------------------------------------------------
# Mypy — strict mode for the scaffold; third-party libs without stubs are
# explicitly excused via overrides to keep the build green during scaffolding.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = [
    "alpaca.*",
    "finnhub.*",
    "yahooquery.*",
    "apscheduler.*",
    "sqlcipher3.*",
    "claude_agent_sdk.*",
    "pandas_market_calendars.*",
    "slack_bolt.*",
    "slack_sdk.*",
]
ignore_missing_imports = true
